# autorename-pdf

./: .env.example  .gitignore  AUTHORS  CLAUDE.md  LICENSE  README.md  VERSION  _ai_clients.py  _ai_processing.py  _config_loader.py  _document_processing.py  _paddleocr_bridge.py  _pdf_utils.py  _utils.py  add-to-context-menu.py  add-to-context-menu.spec  autorename-pdf.exe.spec  autorename-pdf.py  autorename-pdf.spec  autorename.py  autorename_pdf_runner.py  build.py  bump-version.py  config.yaml.example  doskey-alias.bat  harmonized-company-names.json.example  harmonized-company-names.yaml.example  metadata.json  pdf_processor.py  requirements-dev.txt  requirements.txt  setup.ps1  velopack.cjs
.claude/: settings.json
.claude/agents/: pdf-debugger.md
.claude/skills/rename-pdfs/: SKILL.md
.claude/skills/rename-pdfs-exe/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: FUNDING.yml
gui/: colors.json  icons.config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
gui/scripts/: generate-app-icons.cjs  generate-colors.js
gui/src/: main.ts  renderer.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/css/: accessibility.css  index.css  (+6 more)
tests/: conftest.py  generate_test_pdfs.py  test_ai_processing.py  test_cli.py  test_config_loader.py  test_document_processing.py  test_end_to_end.py  test_extraction_fixtures.py  test_live_integration.py  test_pdf_utils.py  test_utils.py
(+25 files in other folders)
